fixes spacing issues

--- a/css/layout.css
+++ b/css/layout.css
@@ -60,6 +60,11 @@
  	text-align: center;
  }*/
 
+ fieldset{
+ 	margin-top: 1em;
+
+ }
+
  input[type="text"] {
   border: 3px #FFF;
   font-size: 1.5em;
@@ -160,6 +165,8 @@ EVENT PAGES
 
 .event-detail {
 	background: rgba(240,240,240,.8);
+	margin-top: 2em;
+	padding-bottom: 2em;
 }
 
 .event-detail p{
@@ -199,24 +206,38 @@ EVENT PAGES
 	margin: .5em 0 -1em 0;
 }
 
+/********
+EVENT DETAIL PAGES
+********/
+
 
 /*social media links*/
 
 .soc-link {
-	font-size: 1.5em;
+	font-size: 3em;
 	text-decoration: none;
 	float: right;
 	margin-bottom: 1em;
-	margin-right: 1em;
+	margin-right: .5em;
 }
 
 .save-event {
-	margin-left: 1em;
+	margin-left: .5em;
 	text-decoration: none;
-	font-weight: bold;
+	font-weight: 800;
+	margin-bottom: 2em;
+	font-family: 'Proxima Nova Rg';
+	font-size: 1.75em;
+	line-height: 1.75em;
 }
 .save-event:hover {
 	text-decoration: underline;
+}
+
+.event-detail>h2{
+	font-size: 1.25em;
+	margin-left: .75em;
+	text-transform: uppercase;
 }
 
 /* #Media Queries
