--- a/css/modules.css
+++ b/css/modules.css
@@ -64,3 +64,7 @@ EVENT LIST ENTRY
   font-size: 1.5em;
   margin:.1em 5% 0;
 }
+
+.similar-events li{
+  margin-bottom: .2em;
+}
